# Bushidan-Multi-Agent

./: .coderabbit.yaml  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DISCORD_LLM_INTEGRATION.md  DISCORD_SETUP.md  IMPLEMENTATION_GUIDE.md  INTERACTIVE_MODE.md  README.md  README_UPDATED.md  README_ja.md  __init__.py  bushidan_config.yaml  bushidan_mcp_status.py  claude_api_server.py  cli.py  codings_summary_table.md  ecosystem.config.cjs  generate_coding_summary.py  local_llm_server.py  main.py  mcp_status_checker.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  claude.yml
benchmarks/: benchmark_framework.py  standard_tasks.py
bushidan/: __init__.py  approval_manager.py  discord_bot.py  discord_llm_messenger.py  discord_reporter.py  mattermost_approval.py  mattermost_bot.py  mattermost_reporter.py  slack_bot.py  update_mattermost_profiles.py
config/: discord_llm_accounts.json  interactive_config.yaml  litellm_config.yaml  mcp_config.yaml  mcp_permissions.yaml  mcp_status_config.yaml  prometheus.yml  semantic_knowledge.json  settings.yaml  settings_v9.3.2.yaml
console/: __init__.py  app.py  auth.py  maintenance.py
console/static/: index.html  style.css
core/: ashigaru.py  ashigaru_selection.py  bdi_framework.py  bdi_karo.py  bdi_shogun.py  bdi_taisho.py  code_verifier.py  error_handling.py  gemini_flash_autonomous_executor.py  gunshi.py  hanseikai_manager.py  intelligent_router.py  karo.py  katun_generator.py  kengyo.py  langgraph_mcp_bridge.py  langgraph_router.py  liveness_checker.py  maintenance.py  mcp_manager.py  mcp_permissions.py  mcp_sdk.py  monthly_katun_scheduler.py  multi_step_task_detector.py  sanbo.py  shogun.py  state.py  system_orchestrator.py  taisho.py
core/audit/: __init__.py  audit_logger.py
core/processors/: __init__.py  analyze_intent.py  code_quality_loop.py  fast_generation.py  notion_search.py  pre_process.py  route_decision.py
docs/: API_SETUP_GUIDE.md  CLAUDE_API_SERVER_SETUP.md  LLAMACPP_SETUP.md  QUICKSTART.md  ci-workflow.yml  error_handling_v9.3.md  opus_review_system.md  v9.3.2_IMPLEMENTATION_GUIDE.md  v9.4_IMPLEMENTATION_GUIDE.md
instructions/: ashigaru.md  maintenance.md
integrations/: notion_integration.py
interfaces/: matrix_bot.py  mcp_api_client.py
maintenance/: README.md  __init__.py  analyze_performance.py  backup_system.py  check_api_keys.py  check_model_updates.py  check_system_health.py  cleanup_memory.py  rotate_logs.py  setup_discord_llm_accounts.py
mcp/: __init__.py  filesystem_mcp.py  mattermost_mcp_server.py  smithery_config.json  smithery_manager.py  web_search_mcp.py
mcp_servers/: __init__.py  filesystem_mcp.py  git_mcp.py  mattermost_mcp_server.py  memory_mcp.py  smithery_config.json  smithery_manager.py
migration/: 01_vzdump_export.sh  02_extract_files.sh  03_create_lxc.sh  04_setup_environment.sh  05_verify.py  README.md  config.sh
notebooks/: 00_quickstart.ipynb  audit_analysis.ipynb  performance_metrics.ipynb  role_effectiveness.ipynb  skill_evolution_dashboard.ipynb  utils.py
roles/: __init__.py  base.py  daigensui.py  gaiji.py  gunshi.py  kengyo.py  metsuke.py  onmitsu.py  sanbo.py  seppou.py  shogun.py  uketuke.py  yuhitsu.py
scripts/: analyze_coding_directory.py  analyze_codings.py  setup_llamacpp_prodesck600.sh  setup_local_qwen.sh  update_from_slack_to_discord.sh  update_production.sh  weekly_evolution.py
setup/: install.sh  install_evolution_timer.sh  maintenance.sh  proxmox_setup_v94.sh  setup_groq.sh  setup_local_llm.sh  setup_nemotron.sh
test/: hello.txt  output.md
tests/: conftest.py  test_mcp_status.py
utils/: __init__.py  alibaba_qwen_client.py  anthropic_batch.py  audit_log.py  base_client.py  bushidan_files.py  bushidan_logger.py  cache_manager.py  cerebras_client.py  claude_api_client.py  claude_cli_client.py  claude_client.py  claude_client_cached.py  client_registry.py  code_quality_loop.py  code_sandbox.py  cohere_client.py  config.py  dspy_client.py  dspy_validators.py  elyza_client.py  evolution_proposals.py  gemini3_client.py  gemini_client.py  gpt5_client.py  grok_client.py  groq_client.py  instruction_parser.py  kimi_k2_client.py  litellm_router.py  local_model_manager.py  logger.py  matrix_client.py  mistral_client.py  nemotron_llamacpp_client.py  o3mini_client.py  opus_client.py  quality_metrics.py  qwen3_client.py  qwen3_coder_next_client.py  (+6 more)
(+49 files in other folders)
